--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -93,9 +93,9 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 轻量级锁加锁步骤：
 
 1. 代码执行到同步块，若锁对象的Mark Word中的锁标志位是"01"的话，JVM会在当前线程的栈中创建一条名为**lock**的记录（锁记录lock record）。这个记录用来存储当前锁对象的Mark Word的拷贝，官方称之为**Displaced Mark Word**。
-2. CAS操作尝试讲锁对象的Mark Word替换为锁标志位"00"与指向lock record的指针。
+2. CAS操作尝试将锁对象的Mark Word替换为锁标志位"00"与指向lock record的指针。
 3. 若操作成功，则加锁成功，当前线程持有锁。
-4. 若操作失败，JVM先检查当前线程是否已经持有该锁，若是则直接进入同步块执行代码。否则说明存在竞争，有其他线程抢先占有了该锁，此时轻量级锁将会膨胀为重量级锁。
+4. 若操作失败，JVM先检查当前线程是否已经持有该锁，若是则直接进入同步块执行代码。否则说明存在竞争，有其他线程抢先占有了该锁，此时**轻量级锁将会膨胀为重量级锁**。
 
 轻量级锁解锁步骤：
 
@@ -105,15 +105,17 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 
 *参考：[JAVA Introduction to lightweight lock](https://www.iodraw.com/en/blog/200844756)*
 
-### 3.1 无锁
+### 3.3 偏向锁
+
+线程在占有monitor的过程中通常会伴随着多次CAS操作（轻量级锁的过程），这带来可观的本地延迟。对于无竞争的场景来说，这部分操作就有些多余（HotSpot偏向锁的作者讲，大部分的锁对象在其生命周期中只会被同一个线程持锁）。偏向锁的引入就是为了减少这部分的开销的。
+
+*参考：[Biased Locking in HotSpot](https://blogs.oracle.com/dave/biased-locking-in-hotspot)*
+
+### 3.4 无锁
 
 无锁状态也是对象的平常的状态，没有线程对它锁定，一个无锁状态的对象能够被所有的线程访问且修改。
 
-无锁状态下的对象也能做到安全地共享，比如上面讲的CAS，线程不断地尝试修改共享对象，若有版本冲突则继续重试，直到修改成功退出，同一时刻只有一个线程能够修改成功。
+无锁状态下的对象也能做到安全地共享，比如上面讲的CAS，线程不断地尝试修改共享对象，若有版本冲突则继续重试，直到修改成功退出。但要做到保证原子，同一时刻只有一个线程能够修改成功。
 
-### 3.2 偏向锁
 
-线程在执行同步方法或同步块时，总是需要加锁和释放锁。在竞争不激烈甚至不存在竞争时，一段时间内一个锁总是被同一个线程多次占有（有文章讲有研究发现大多数的情况下都是这样），每次的加锁和释放锁就成了多余的消耗，偏向锁的出现解决了这个问题。
-
-当一个线程获取到锁时，会在锁对象的`Mark Word`里记录指向当前线程的线程id，并将是否是偏向锁biased_lock标记为1。
 
