--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -92,7 +92,7 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 
 轻量级锁加锁步骤：
 
-1. 代码执行到同步块，若锁对象的Mark Word中的锁标志位是"01"的话，JVM会在当前线程的栈中创建一条名为**lock**的记录（锁记录lock record）。这个记录用来存储当前锁对象的Mark Word的拷贝，官方称之为**Displaced Mark Word**。
+1. 代码执行到同步块，若锁对象的Mark Word中的锁标志位是"01"的话，JVM会在当前线程的栈帧中创建一条名为**lock**的记录（锁记录lock record）。这个记录用来存储当前锁对象的Mark Word的拷贝，官方称之为**Displaced Mark Word**。
 2. CAS操作尝试将锁对象的Mark Word替换为锁标志位"00"与指向lock record的指针。
 3. 若操作成功，则加锁成功，当前线程持有锁。
 4. 若操作失败，JVM先检查当前线程是否已经持有该锁，若是则直接进入同步块执行代码。否则说明存在竞争，有其他线程抢先占有了该锁，此时**轻量级锁将会膨胀为重量级锁**。
@@ -109,7 +109,18 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 
 线程在占有monitor的过程中通常会伴随着多次CAS操作（轻量级锁的过程），这带来可观的本地延迟。对于无竞争的场景来说，这部分操作就有些多余（HotSpot偏向锁的作者讲，大部分的锁对象在其生命周期中只会被同一个线程持锁）。偏向锁的引入就是为了减少这部分的开销的。
 
-*参考：[Biased Locking in HotSpot](https://blogs.oracle.com/dave/biased-locking-in-hotspot)*
+当线程执行到同步块时，获取到锁后，会在锁对象的Mark Word里存储偏向线程ID（当前线程ID）。当线程再次需要获取锁的时候，它不再需要CAS操作来加锁和释放锁，而是先去检查该锁对象的Mark Word中是否有指向当前线程的偏向线程id，若有，则说明已经获得锁，若无，再判断下偏向锁标识，若是无锁状态，则CAS尝试设置偏向线程id，成功的话则加锁成功。
+
+线程不会主动释放偏向锁，若没有竞争的话，锁对象的Mark Word会一直偏向于该线程。当发生竞争时，会引起偏向锁的撤销，偏向锁的撤销需要等待“安全局点Safe Point（在这个节点上没有字节码在运行）”，然后暂停拥有偏向锁的线程，判断：
+
+1. 偏向线程未持有该锁（偏向线程死亡或偏向线程栈中lock record未找到该锁），允许重偏向的则该锁变为可偏向锁，否则撤销为无锁。（重偏向没搞懂。。）
+2. 偏向线程正在持有该锁，偏向锁升级为轻量级锁。
+
+*偏向锁的撤销参考：[源码解析-偏向锁撤销流程解读](https://www.jianshu.com/p/7445361e187f)*
+
+JDK1.6以后，偏向锁是默认开启的，也可以通过JVM参数`-XX:-UseBiasedLocking=false`来关闭它。值得一提的是，在JDK15中，hotspot干掉了偏向锁：[JEP 374: Disable and Deprecate Biased Locking](https://openjdk.java.net/jeps/374)
+
+(有空再看：[Synchronization - Synchronization - OpenJDK Wiki ](https://wiki.openjdk.java.net/display/HotSpot/Synchronization))
 
 ### 3.4 无锁
 
