java lock 公平锁与非公平锁

--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -72,7 +72,7 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 |  锁状态  |                                          Mark Word (64 bits) |
 | :------: | -----------------------------------------------------------: |
 |   无锁   | 对象hashCode、分代年龄、是否是偏向锁biased_lock(0)\|锁标志位lock(01) |
-|  偏向锁  | 偏向线程ID、偏向时间戳、对象分代年龄、是否是偏向锁biased_lock(1)\|锁标志位lock(01) |
+|  偏向锁  | 偏向线程ID、偏向时间戳epoch、对象分代年龄、是否是偏向锁biased_lock(1)\|锁标志位lock(01) |
 | 轻量级锁 |                   指向（栈中）锁记录的指针\|锁标志位lock(00) |
 | 重量级锁 |          指向重量级锁（monitor对象）的指针\|锁标志位lock(10) |
 
@@ -107,7 +107,7 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 
 ### 3.3 偏向锁
 
-线程在占有monitor的过程中通常会伴随着多次CAS操作（轻量级锁的过程），这带来可观的本地延迟。对于无竞争的场景来说，这部分操作就有些多余（HotSpot偏向锁的作者讲，大部分的锁对象在其生命周期中只会被同一个线程持锁）。偏向锁的引入就是为了减少这部分的开销的。
+线程在占有monitor的过程中通常会伴随着多次CAS操作（轻量级锁的过程），这会带来不小的本地延迟。对于无竞争的场景来说，这部分操作就有些多余（HotSpot偏向锁的作者讲，大部分的锁对象在其生命周期中只会被同一个线程持锁）。偏向锁的引入就是为了减少这部分的开销的。
 
 当线程执行到同步块时，获取到锁后，会在锁对象的Mark Word里存储偏向线程ID（当前线程ID）。当线程再次需要获取锁的时候，它不再需要CAS操作来加锁和释放锁，而是先去检查该锁对象的Mark Word中是否有指向当前线程的偏向线程id，若有，则说明已经获得锁，若无，再判断下偏向锁标识，若是无锁状态，则CAS尝试设置偏向线程id，成功的话则加锁成功。
 
@@ -127,6 +127,18 @@ JDK1.6以后，偏向锁是默认开启的，也可以通过JVM参数`-XX:-UseBi
 无锁状态也是对象的平常的状态，没有线程对它锁定，一个无锁状态的对象能够被所有的线程访问且修改。
 
 无锁状态下的对象也能做到安全地共享，比如上面讲的CAS，线程不断地尝试修改共享对象，若有版本冲突则继续重试，直到修改成功退出。但要做到保证原子，同一时刻只有一个线程能够修改成功。
+
+## 4 公平锁与非公平锁
+
+**公平锁**：所有线程按照申请锁的顺序依次等待获取锁，存在一个排队队列，下一个获取到锁的线程是队列的第一位。
+
+- 优点：所有线程都能获取到锁，不会饿死在队列中
+- 缺点：吞吐量的不足，除了第一个线程，其余线程都会阻塞
+
+**非公平锁**：线程在申请锁的时候，会尝试直接去获取锁，有可能会直接获取成功，获取不到的话进入等待队列。
+
+- 优点：提高吞吐量，减少线程的唤醒开销
+- 缺点：可能会有线程一直获取不到锁，在队列中饿死
 
 
 
