java lock 可重入锁与非可重入锁

--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -140,5 +140,22 @@ JDK1.6以后，偏向锁是默认开启的，也可以通过JVM参数`-XX:-UseBi
 - 优点：提高吞吐量，减少线程的唤醒开销
 - 缺点：可能会有线程一直获取不到锁，在队列中饿死
 
+## 5 可重入锁与非可重入锁
+
+这里的可重入是指一个线程在已经进入了一个同步块或方法（已经获取到锁）的情况下，能否再次进入被**同一把锁**控制的另一个同步块或方法。比如对当前方法的递归调用场景。
+
+举个例子：
+
+```java
+public synchronized void method() {
+    ...
+    method();
+}
+```
+
+上面的代码中，对于可重入锁来说，线程进入`method()`方法后，允许再次递归调用`method()`。假如是非可重入锁的话，线程就会在`method()`方法内部执行到递归调用时发生阻塞（这一阻塞就是个死锁）。
+
+在JDK中，`ReentrantLock`和`synchronized`都是可重入锁，可重入锁在一定程度上可以避免死锁的发生。
+
 
 
