--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -157,5 +157,9 @@ public synchronized void method() {
 
 在JDK中，`ReentrantLock`和`synchronized`都是可重入锁，可重入锁在一定程度上可以避免死锁的发生。
 
+## 6 共享锁与独占锁
 
+独占锁：每次只能有一个线程访问共享资源，它以独占式的方式占有锁，在其持有锁期间，所有其他线程均不能对共享资源进行访问。
+
+共享锁：允许多个线程同时获取锁，并发时多个线程均能访问共享资源。比如`ReadWriteLock`中的读锁，允许同一时间多个线程对一个资源的读操作。
 
