--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -163,3 +163,6 @@ public synchronized void method() {
 
 共享锁：允许多个线程同时获取锁，并发时多个线程均能访问共享资源。比如`ReadWriteLock`中的读锁，允许同一时间多个线程对一个资源的读操作。
 
+## 7 什么是AQS
+
+`AbstractQueuedSynchronizer`，抽象队列式同步器，它提供了**一个基于FIFO等待队列的实现锁的框架**。
