--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -165,4 +165,24 @@ public synchronized void method() {
 
 ## 7 什么是AQS
 
-`AbstractQueuedSynchronizer`，抽象队列式同步器，它提供了**一个基于FIFO等待队列的实现锁的框架**。
+`AbstractQueuedSynchronizer`，抽象队列式同步器，它提供了**一个基于FIFO等待队列的实现锁的框架**。继承于AQS，JDK实现了多个同步工具，如常用的`ReentrantLock`/`Semaphore`/`CountDownLatch`。
+
+AQS的内部维护了一个`volatile int state`来表示共享资源状态，一个FIFO等待队列用来线程排队。通过这俩实现了同步功能。
+
+`volatile`修饰的`state`意味着共享资源的状态在修改后能够立刻对所有线程可见。线程并发地争抢`state`的修改权，`state`为0表示可以被修改（未锁定），不为0表示被锁定。加锁失败的线程被放入等待队列中排队，等待正在执行的线程释放锁后唤醒。（是不是有点类似monitor的计数器，感觉思路是差不多）
+
+![image-20210812230654386](assets/image-20210812230654386.png)
+
+AQS定义了两种资源的共享方式：
+
+- **Exclusive**：独占式，排他，同时只能有一个线程执行，如`ReentrantLock`
+- **Share**：共享式，多个线程能同时执行，如`Semaphore`/`CountDownLatch`
+
+AQS只是一个基础的、抽象的锁框架，自定义的同步器通过继承它来实现不同的锁功能。AQS已经实现了线程等待队列的功能，自定义同步器只需要实现自己的`state`的获取与释放方式。一般来说，需要实现的方法有：
+
+- `isHeldExclusively()`：当前线程是否是独占式持有资源。未用到`Condition`的不需要区实现它。
+- `tryAcquire(int)`：独占式。尝试获取资源，成功返回true，失败返回false。
+- `tryRelease(int)`：独占式。尝试释放资源，成功返回true，失败返回false。
+- `tryAcquireShared(int)`：共享式。尝试获取资源，失败返回负数，返回0表示无可用资源，返回整数表示成功且有可用资源。
+- `tryReleaseShared(int)`：共享式。尝试释放资源，如果释放后允许唤醒后续等待结点返回true，否则返回false。
+
