--- a/Java/2.Java-Core/5.java-concurrency-volatile.md
+++ b/Java/2.Java-Core/5.java-concurrency-volatile.md
@@ -1,1 +1,15 @@
 # Java并发之volatile
+
+`volatile`是一个关键字，被`volatile`修饰的共享变量，[Java内存模型](https://docs.oracle.com/javase/specs/jls/se8/html/jls-17.html#jls-17.4)需要保证其在所有线程中看到的是一个一致的值。`volatile`的作用有：
+
+- 保证变量可见性
+- 禁止指令重排序
+
+
+
+（马克后看...）
+
+[volatile 关键字，你真的理解吗](https://zhuanlan.zhihu.com/p/138819184)
+
+[Java内存模型与指令重排](https://www.cnblogs.com/xdecode/p/8948277.html)
+
