--- a/Java/2.Java-Core/5.java-concurrency-volatile.md
+++ b/Java/2.Java-Core/5.java-concurrency-volatile.md
@@ -1,5 +1,7 @@
 # Java并发之volatile
 
+Java多线程带来了共享变量的可见性问题——一个线程对一个共享变量的更新操作，不能保证其他线程对该共享变量的读操作能够拿到一个预期的值。Java提供了两种机制来保证了共享变量的可见性：1. 加锁（如`synchronized`）；2. 使用`volatile`来修饰共享变量。
+
 `volatile`是一个关键字，被`volatile`修饰的共享变量，[Java内存模型](https://docs.oracle.com/javase/specs/jls/se8/html/jls-17.html#jls-17.4)需要保证其在所有线程中看到的是一个一致的值。`volatile`的作用有：
 
 - 保证变量可见性
