java memory model

--- a/Java/2.Java-Core/6.java-memory-model.md
+++ b/Java/2.Java-Core/6.java-memory-model.md
@@ -1,7 +1,8 @@
 # Java内存模型
 
-Java内存模型（java memory model，JMM）是一套**规范**。
+Java内存模型（java memory model，JMM）是一套**规范**。此内存模型非彼*内存模型（JVM运行时数据区）*。
 
 内存模型是什么？给定一段程序的的执行轨迹，内存模型描述了该执行轨迹的合法性。Java内存模型是如何实现的？其是**通过检查执行轨迹中的每一个读操作，并校验在特定规则下，写操作的结果能够被读操作有效观察到**。
 
 内存模型只是个规范，其描述了一个程序可能（应该有）的行为。只要程序运行的结果能够符合模型的预测，任一实现生成的任意代码都是被允许的。这就为实现者实施五花八门的代码转换提供了很大的自由，这些代码转换就包括了指令重排序和不必要的同步操作的去除。
+
