--- a/Java/3.Redis/1.redis-basic.md
+++ b/Java/3.Redis/1.redis-basic.md
@@ -33,9 +33,9 @@ hash结构中，值的结构是多个field -> value，比如：
 
 ```shell
 > HSET a_key field1 value1
-1
+(integer) 1
 > HSET a_key field2 value2
-1
+(integer) 1
 > HGET a_key field1
 "value1"
 > HGET a_key field1
@@ -46,9 +46,9 @@ hash结构中，值的结构是多个field -> value，比如：
 
 ```shell
 > HSET a_key field1 value1
-1
+(integer) 1
 > HSET a_key field1 value2
-0
+(integer) 0
 > HGET a_key field1
 "value2"
 ```
@@ -66,11 +66,11 @@ list是简单的字符串有序列表，你既可以在头部（left）插入或
 
 ```shell
 > RPUSH a_key item1
-1
+(integer) 1
 > RPUSH a_key item2
-2
+(integer) 2
 > RPUSH a_key item3
-3
+(integer) 3
 > LRANGE a_key 0 10
 1) "item1"
 2) "item2"
@@ -83,3 +83,89 @@ list是简单的字符串有序列表，你既可以在头部（left）插入或
 - `RPOP key`：移除并返回尾部元素
 
 ### 2.4 集合（Set）
+
+set类型是String类型的**无序集合**。集合中的成员是唯一的。常见用法：
+
+```shell
+> SADD a_key item1
+(integer) 1
+> SADD a_key item2
+(integer) 1
+> SADD a_key item2
+(integer) 0
+> SMEMBERS a_key
+1) "item1"
+2) "item2"
+```
+
+上面的例子中，若集合中不存在元素item1，那么SADD时会返回1，若已存在该元素，则返回0。
+
+集合（Set）的其他常见命令：
+
+- `SDIFF key1 [key2]`：返回第一个集合与其他集合的差异
+- `SINTER key1 [key2]`：返回集合的交集
+- `SUNION key1 [key2]`：返回集合的并集
+- `SREM key member1 [member2]`：移除集合中一个或多个元素
+
+### 2.5 有序集合（Sorted Set）
+
+类似于set，sorted set也是一个String类型的集合，其成员也是唯一的。区别是sorted set的元素会关联一个double类型的值（可以理解为score 分数或是优先级）。redis根据分数将sorted set中的元素从小到大排序。分数允许重复。
+
+```shell
+> ZADD a_key 1 item1
+(integer) 1
+> ZADD a_key 0.5 item2
+(integer) 1
+> ZADD a_key 2 item2
+(integer) 0
+> ZADD a_key 0.5 item4
+(integer) 1
+> ZADD a_key 0.5 item3
+(integer) 1
+> ZADD a_key 5 item5
+(integer) 1
+> ZRANGE a_key 0 10 WITHSCORES
+ 1) "item3"
+ 2) "0.5"
+ 3) "item4"
+ 4) "0.5"
+ 5) "item1"
+ 6) "1"
+ 7) "item2"
+ 8) "2"
+ 9) "item5"
+10) "5"
+> ZRANGE a_key 0 10
+1) "item3"
+2) "item4"
+3) "item1"
+4) "item2"
+5) "item5"
+```
+
+根据观察例子中`ZRANGE`的结果，可以总结出：
+
+1. 集合中已存在的item，再次`ZADD`时，会返回0，**但是score会更新成功**。
+2. 相同分数（score）的多个item，返回时是乱序的。
+3. `ZRANGE`后面带上`WITHSCORES`时，会将分数也返回。
+
+其他一些sorted set的用法：
+
+- `ZCOUNT key min max`：返回有序集合指定分数区间的元素数量
+- `ZREM key member [member ...]`：移除有序集合中一个或多个元素
+- `ZREVRANGEBYSCORE key max min [WITHSCORES]`：返回有序集中指定分数区间内的元素，分数从高到低排序
+
+## 3 键（Key）
+
+redis的数据操作都是基于键的，键相关的基本命令有：
+
+- `DEL key`：key存在时，删除key
+- `EXISTS key`：检查key是否存在。存在返回1，不存在返回0
+- `EXPIRE key seconds`：给key设置过期时间，单位是秒
+- `PEXPIRE key milliseconds`：给key设置过期时间，单位是毫秒
+- `EXPIREAT key timestamp`：给key设置一个过期时间点，这个时间点参数是[UNIX时间戳](https://baike.baidu.com/item/unix%E6%97%B6%E9%97%B4%E6%88%B3/2078227)，精度是秒
+- `PEXPIREAT key milliseconds-timestamp`：同EXPIREAT ，精度是毫秒
+- `TTL key`：返回key的剩余生存时间，单位是秒
+- `PTTL key`：返回key的剩余生存时间，单位是毫秒
+- `RENAME key1 key2`：修改key的名称，将key1改为key2。当key1不存在时，报错；当key2已存在时，修改成功后，原key2的值会被覆盖掉
+
