--- a/Java/3.Redis/1.redis-basic.md
+++ b/Java/3.Redis/1.redis-basic.md
@@ -188,3 +188,93 @@ redis的数据操作都是基于键的，键相关的基本命令有：
 - `PTTL key`：返回key的剩余生存时间，单位是毫秒
 - `RENAME key1 key2`：修改key的名称，将key1改为key2。当key1不存在时，报错；当key2已存在时，修改成功后，原key2的值会被覆盖掉
 
+
+
+## 5 事务
+
+Redis的每一个操作都是原子的，每个操作无非是成功或是失败。若想多个操作实现原子，Redis也提供了事务来支持。
+
+Redis事务可以一次执行多个命令，它以`MULTI`命令开始，以`EXEC`命令结束触发执行。两条执行中间的n个命令，被放入队列中，在事务提交后一并执行。
+
+示例：
+
+```shell
+> MULTI
+OK
+> SET a_key value
+QUEUED
+> GET a_key
+QUEUED
+> SADD a_key item1 item2
+QUEUED
+> SMEMBERS a_key
+QUEUED
+> INCR count_key
+QUEUED
+> INCR count_key
+QUEUED
+> GET a_key
+QUEUED
+> EXEC
+1) OK
+2) "value"
+3) (error) WRONGTYPE Operation against a key holding the wrong kind of value
+4) (error) WRONGTYPE Operation against a key holding the wrong kind of value
+5) (integer) 1
+6) (integer) 2
+7) "value"
+```
+
+需要注意的是，Redis的事务更多的像是一个”打包“的概念，其与关系型数据库的事务有着本质的区别。**在一个事务中，如果有指令执行失败，它不会打断整个事务并回滚，失败之前与之后的指令都会正常地执行。**（看上面例子中的第3、4条指令是失败的指令）
+
+### 5.1 事务的回滚——`WATCH`机制
+
+有一个例外可以控制事务的回滚——`WATCH`命令，`WATCH`命令在`MULTI`命令前提交，其作用是监视一个key的值，若在`EXEC`时，该key的值发生了变更，那么整个事务的内容都不会被提交（回滚）。我们来做个例子，开启两个Redis客户端client1、client2。
+
+在client1中我们键入：
+
+```shell
+# client1
+> SET key value1
+OK
+> WATCH key
+OK
+> MULTI
+OK
+> GET key
+QUEUED
+> SET key value2
+QUEUED
+```
+
+注意此时我们还未执行`EXEC`，我们在client2中键入：
+
+```shell
+# client2
+> GET key
+"value1"
+> SET key value3
+OK
+> GET key
+"value3"
+```
+
+再回到client1中执行`EXEC`：
+
+```shell
+# client1
+> EXEC
+(nil)
+> GET key
+"value3"
+```
+
+`EXEC`的返回是(nil)，key的值是client2中设置的"value3"。
+
+我们总结一下`WATCH`机制的流程：
+
+![image-20210822235226757](assets/image-20210822235226757.png)
+
+*无论事务是否回滚，Redis 都会去`UNWATCH`事务前的 `WATCH`命令。*
+
+是不是感觉流程有点熟悉？与前面学习线程与锁里的CAS很像？
