--- a/Java/3.Redis/1.redis-basic.md
+++ b/Java/3.Redis/1.redis-basic.md
@@ -192,6 +192,8 @@ redis的数据操作都是基于键的，键相关的基本命令有：
 
 ## 5 事务
 
+### 5.1 事务操作——`MULTI`&`EXEC`组合
+
 Redis的每一个操作都是原子的，每个操作无非是成功或是失败。若想多个操作实现原子，Redis也提供了事务来支持。
 
 Redis事务可以一次执行多个命令，它以`MULTI`命令开始，以`EXEC`命令结束触发执行。两条执行中间的n个命令，被放入队列中，在事务提交后一并执行。
@@ -227,7 +229,7 @@ QUEUED
 
 需要注意的是，Redis的事务更多的像是一个”打包“的概念，其与关系型数据库的事务有着本质的区别。**在一个事务中，如果有指令执行失败，它不会打断整个事务并回滚，失败之前与之后的指令都会正常地执行。**（看上面例子中的第3、4条指令是失败的指令）
 
-### 5.1 事务的回滚——`WATCH`机制
+### 5.2 事务的回滚——`WATCH`机制
 
 有一个例外可以控制事务的回滚——`WATCH`命令，`WATCH`命令在`MULTI`命令前提交，其作用是监视一个key的值，若在`EXEC`时，该key的值发生了变更，那么整个事务的内容都不会被提交（回滚）。我们来做个例子，开启两个Redis客户端client1、client2。
 
@@ -269,7 +271,7 @@ OK
 "value3"
 ```
 
-`EXEC`的返回是(nil)，key的值是client2中设置的"value3"。
+`EXEC`的返回是*(nil)*，key的值是client2中设置的*"value3"*。
 
 我们总结一下`WATCH`机制的流程：
 
@@ -277,4 +279,105 @@ OK
 
 *无论事务是否回滚，Redis 都会去`UNWATCH`事务前的 `WATCH`命令。*
 
-是不是感觉流程有点熟悉？与前面学习线程与锁里的CAS很像？
+是不是感觉流程有点熟悉？与前面学习线程与锁里的CAS很像？思想是一样的，“比较”（对比键值对变化）与“交换”（未变则执行，否则回滚）。`WATCH`机制还与Java中的CAS不同的是，`WATCH`并不会引起ABA问题，我们来做个实验：
+
+启动3个客户端，在client1中键入：
+
+```shell
+# client1
+> SET key value1
+OK
+> WATCH key
+OK
+> MULTI
+OK
+> GET key
+QUEUED
+> SET key value2
+QUEUED
+```
+
+在client2中键入：
+
+```shell
+# client2
+127.0.0.1:6379> GET key
+"value1"
+127.0.0.1:6379> SET key value3
+OK
+127.0.0.1:6379> GET key
+"value3"
+```
+
+在client3中键入：
+
+```shell
+# client3
+127.0.0.1:6379> GET key
+"value3"
+127.0.0.1:6379> SET key value1
+OK
+127.0.0.1:6379> GET key
+"value1"
+```
+
+回到client3中继续执行：
+
+```shell
+# cilent1
+127.0.0.1:6379> EXEC
+(nil)
+> GET key
+"value1"
+```
+
+我们可以看到`EXEC`的结果依旧是*(nil)*失败，ABA在这里不存在。
+
+## 6 发布订阅模型
+
+Redis的发布订阅模式是一种“一对多”的消息通信模式。多个客户端订阅（subscribe）一个频道（channel），一个客户端向该频道发布（publish）消息，所有订阅该频道的客户端都会收到该消息。
+
+![image-20210823170453588](assets/image-20210823170453588.png)
+
+我们来实验一下，开启4个客户端：
+
+client1、client2、client3中分别订阅频道“*a_channel*”：
+
+```shell
+# client1/client2/client3
+> SUBSCRIBE a_channel
+Reading messages... (press Ctrl-C to quit)
+1) "subscribe"
+2) "a_channel"
+3) (integer) 1
+
+```
+
+在client4中向该频道发布消息：
+
+```shell
+# client4
+> PUBLISH a_channel "I must tell you something..."
+(integer) 3
+```
+
+在client1、client2、client3中我们会分别收到：
+
+```shell
+# client1/client2/client3
+1) "message"
+2) "a_channel"
+3) "I must tell you something..."
+```
+
+![image-20210823171151026](assets/image-20210823171151026.png)
+
+发布订阅命令相关的命令有：
+
+- `PUBLISH channel message`：将信息发送到指定的频道。
+- `SUBSCRIBE channel [channel ...]`：订阅一个或多个频道。
+- `UNSUBSCRIBE [channel [channel ...]]`：指退订指定的频道。
+- `PSUBSCRIBE pattern [pattern ...]`：订阅一个或多个符合给定模式的频道。
+- `PUBSUB subcommand [argument [argument ...]]`：查看订阅与发布系统状态。
+- `PUNSUBSCRIBE [pattern [pattern ...]]`：退订所有给定模式的频道。
+
