redis thread model

--- a/Java/3.Redis/2.redis-thread-model.md
+++ b/Java/3.Redis/2.redis-thread-model.md
@@ -1,6 +1,8 @@
 # Redis线程模型
 
-*参考于：[Redis 和 Memcached 有什么区别？- Redis的线程模型](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/redis-single-thread-model)*
+*参考：[Redis 和 Memcached 有什么区别？- Redis的线程模型](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/redis-single-thread-model)*
+
+*参考：[文件事件 — Redis 设计与实现](http://redisbook.com/preview/event/file_event.html)*
 
 Redis的核心是一个叫**文件事件处理器（File Event Handler）**，这个东西是个单线程的，所以大家才说Redis是单线程的模型。
 
