redis deployment architectrue

--- a/Java/3.Redis/3.redis-deployment-architecture.md
+++ b/Java/3.Redis/3.redis-deployment-architecture.md
@@ -1,6 +1,6 @@
 # Redis部署架构
 
-*参考：[在项目中缓存是如何使用的？](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/why-cache)*
+*参考：[如何保证 Redis 高并发、高可用？ ](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/how-to-ensure-high-concurrency-and-high-availability-of-redis)*
 
 Redis单机能不能用？当然可以，架构的演进都是从单节点、小规模开始的。如果你的应用刚起步，用户不多，并发一般般，引入redis做做访问优化，单机完全够用。
 
@@ -16,4 +16,7 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 ### 1.1 主从复制
 
-主从复制机制（master slave replication）是Redis主从架构的核心。
+[Replication – Redis](https://redis.io/topics/replication)
+
+主从复制机制（master slave replication）是Redis主从架构的核心。  
+
