redis thread model

--- a/Java/3.Redis/2.redis-thread-model.md
+++ b/Java/3.Redis/2.redis-thread-model.md
@@ -4,7 +4,7 @@
 
 *参考：[文件事件 — Redis 设计与实现](http://redisbook.com/preview/event/file_event.html)*
 
-Redis的核心是一个叫**文件事件处理器（File Event Handler）**，这个东西是个单线程的，所以大家才说Redis是单线程的模型。
+Redis的核心是一个叫**文件事件处理器（File Event Handler）**，这个东西在处理各种事件时是单线程的，所以大家才说Redis是单线程的模型。
 
 单线程有什么好处呢？一是可以轻易地实现操作的原子性（Redis的每一个命令的执行都是原子的）， 而是没有共享资源的同步问题（竞争问题），三是没有了上下文切换的开销，更高效。
 
