--- a/Java/3.Redis/3.redis-deployment-architecture.md
+++ b/Java/3.Redis/3.redis-deployment-architecture.md
@@ -6,7 +6,7 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 等你做大做强了，就要渐渐考虑单机redis的问题，就一台机器挂了怎么办？这台机器的内存快满了怎么办？一台机器的并发渐渐扛不住了怎么办？
 
-怎么办，加机器呗。并发抗不住？加一台机器做**一主一从**架构，从节点只提供读请求，还可以继续加机器做**一主多从**，支撑更高的读并发。容量不够用？水平扩容！**多主多从**，用jedis做客户端分片。规模再扩大的话使用Redis的**集群模式**，再引入**哨兵**保证高可用。
+怎么办，加机器呗。并发抗不住？加一台机器做**一主一从**架构，读写分离，从节点只服务于读请求，还可以继续加机器做**一主多从**，支撑更高的读并发。容量不够用？水平扩容！**多主多从**，用jedis做客户端分片，再引入**哨兵**保证高可用（基于哨兵的高可用集群）。规模再扩大的话使用Redis的**集群模式**（服务端分片，集成了主从复制与哨兵）。
 
 ![image-20210824223624906](assets/image-20210824223624906.png)
 
@@ -18,5 +18,11 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 [Replication – Redis](https://redis.io/topics/replication)
 
-主从复制机制（master slave replication）是Redis主从架构的核心。  
+主从复制机制（master slave replication）是Redis主从架构的核心。 通过简单配置即可指定节点的主从角色及复制关系（*leader-follower*或称*master-slave*），从实例将是主实例的“精确副本”。当链接断开时，从实例都会自动重连主实例，而且无论主实例发生什么事，从实例都会将主实例的状态精确地复制过来（主实例宕机重启且没设置备份数据集空了，从实例也会将空数据集复制过来）。
+
+简单描述一下这机制：
+
+- 当主从实例构建了有效的连接，主实例会将其数据集的变更，源源不断以“流”的方式发送指令给从实例，这些指令包括：客户端的写指令、key的过期与淘汰等。
+- 当主从断连（网络问题或是感知到超时），从节点会尝试重连主节点，如果连接成功，从节点会执行一个“部分重新同步”（partial resynchronization），只去同步断连期间丢失的这部分“指令流”。
+- 如果“部分重新同步”搞不定了，从节点将会执行一次全量同步，这就需要获取主节点的RDB文件，通过RDB文件重构完从节点的数据集后，才继续通过“指令流”的方式来保持主从数据的同步（复制）。
 
