--- a/Java/3.Redis/3.redis-deployment-architecture.md
+++ b/Java/3.Redis/3.redis-deployment-architecture.md
@@ -18,7 +18,7 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 [Replication – Redis](https://redis.io/topics/replication)
 
-主从复制机制（master slave replication）是Redis主从架构的核心。 通过简单配置即可指定节点的主从角色及复制关系（*leader-follower*或称*master-slave*），从实例将是主实例的“精确副本”。当链接断开时，从实例都会自动重连主实例，而且无论主实例发生什么事，从实例都会将主实例的状态精确地复制过来（主实例宕机重启且没设置备份数据集空了，从实例也会将空数据集复制过来）。
+主从复制机制（master slave replication）是Redis主从架构的核心。 通过简单配置即可指定节点的主从角色及复制关系（*leader-follower*或称*master-slave*），从实例将是主实例的“精确副本”。当链接断开时，从实例都会自动重连主实例，而且无论主实例发生什么事，从实例都会将主实例的状态精确地复制过来（即使主实例宕机重启且没设置备份导致数据集空了，从实例也会将空数据集复制过来）。
 
 简单描述一下这机制：
 
@@ -26,3 +26,8 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 - 当主从断连（网络问题或是感知到超时），从节点会尝试重连主节点，如果连接成功，从节点会执行一个“部分重新同步”（partial resynchronization），只去同步断连期间丢失的这部分“指令流”。
 - 如果“部分重新同步”搞不定了，从节点将会执行一次全量同步，这就需要获取主节点的RDB文件，通过RDB文件重构完从节点的数据集后，才继续通过“指令流”的方式来保持主从数据的同步（复制）。
 
+现实中使用最多的一种模式是“自然复制模式”，同时也是Redis的默认异步复制模式，它能够做到低延迟与高性能。
+
+## 2 基于哨兵的高可用
+
+## 3 集群模式
