--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -26,7 +26,7 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 - 当主从断连（网络问题或是感知到超时），从节点会尝试重连主节点，如果连接成功，从节点会执行一个“部分重新同步”（partial resynchronization），只去同步断连期间丢失的这部分“指令流”。
 - 如果“部分重新同步”搞不定了，从节点将会执行一次全量同步，这就需要获取主节点的RDB文件，通过RDB文件重构完从节点的数据集后，才继续通过“指令流”的方式来保持主从数据的同步（复制）。
 
-现实中使用最多的一种模式是“自然复制模式”，同时也是Redis的默认异步复制模式，它能够做到低延迟与高性能。
+现实中使用最多的一种模式是“自然复制模式”，同时也是Redis默认的异步复制模式，能够做到低延迟与高性能。
 
 ## 2 基于哨兵的高可用
 
