--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -28,6 +28,15 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 现实中使用最多的一种模式，同时也是Redis默认的复制模式：异步复制，能够做到低延迟与高性能。
 
+### 1.2 主从复制的一些重点
+
+- Redis使用“异步复制”，从实例会向主实例发送已经处理的数据数量。
+- 一个主实例可以拥有多个从实例。
+- 从实例也可以拥有从实例（级联结构）。
+- 对于主实例来说，复制的过程是非阻塞的。无论从实例是在初始化同步（initial synchronization），还是在部分重同步（partial resynchronization），主实例都能不间断地处理请求。
+- 复制过程中，从实例也基本上是非阻塞的。在初始化同步过程中，
+
 ## 2 基于哨兵的高可用
 
 ## 3 集群模式
+
