--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -33,8 +33,11 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 - Redis使用“异步复制”，从实例会向主实例发送已经处理的数据数量。
 - 一个主实例可以拥有多个从实例。
 - 从实例也可以拥有从实例（级联结构）。
+  ![image-20210901095128919](assets/image-20210901095128919.png)
 - 对于主实例来说，复制的过程是非阻塞的。无论从实例是在初始化同步（initial synchronization），还是在部分重同步（partial resynchronization），主实例都能不间断地处理请求。
-- 复制过程中，从实例也基本上是非阻塞的。在初始化同步过程中，
+- 复制过程中，从实例也**基本上**是非阻塞的。在初始化同步过程中，从实例会先用旧数据集提供查询（这个方式是配置的，否则的话查询请求返回error）。初始化同步结束后，从实例需要删除旧数据集并加载新数据集，在新数据加载完成前是**阻塞**的（大数据集的话可能需要many seconds）。
+- 主从复制一般用于可伸缩架构（基于读负载扩容或缩容从节点），也可以用于高可用（如主节点挂了的话从节点还能继续提供读服务）。
+- 主实例的自动持久化是可以配置为关闭的，在一些特殊的场景，需要避免主实例的写盘开销，可以将主实例配置为不持久化，同时将从实例开启自动持久化，以保证数据安全。不过这样的话**必须将主实例的自动重启关闭**，否则万一出现主实例宕机，主实例会以空数据集重启，复制会将从实例的数据也给清空。
 
 ## 2 基于哨兵的高可用
 
