--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -39,6 +39,15 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 - 主从复制一般用于可伸缩架构（基于读负载扩容或缩容从节点），也可以用于高可用（如主节点挂了的话从节点还能继续提供读服务）。
 - 主实例的自动持久化是可以配置为关闭的，在一些特殊的场景，需要避免主实例的写盘开销，可以将主实例配置为不持久化，同时将从实例开启自动持久化，以保证数据安全。不过这样的话**必须将主实例的自动重启关闭**，否则万一出现主实例宕机，主实例会以空数据集重启，复制会将从实例的数据也给清空。
 
+### 1.3 主从复制的工作原理
+
+主从复制有两个核心概念：
+
+> - **Replication ID**: 一段伪随机的字符串，用于描述一个指定数据集
+> - **Replication Offset**: 一个增长的数值，记录复制流的执行进度（偏移量）
+
+这俩概念组合起来就能标识**特定数据集的精确版本**。
+
 ## 2 基于哨兵的高可用
 
 ## 3 集群模式
