redis主从复制原理

--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -48,6 +48,15 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 这俩概念组合起来就能标识**特定数据集的精确版本**。
 
+当从节点连接至主节点时，从节点会发送[PSYNC](https://redis.io/commands/psync)命令，将当前Replication ID和当前已处理的复制流的offset传给主节点，主节点从offset开始继续向从节点发送复制流（部分重同步partial resynchronization）。但是这种部分复制场景有例外：
+
+1. 主节点中积压的复制流缓冲不能满足从offset开始复制（offset太老了）
+2. 从节点请求的Replication ID与当前主节点的Replication ID不一致（主节点有俩ID，均与请求的ID不同时，这个俩ID在后面讲）
+
+出现这俩场景时，主节点将会执行**全量复制**：
+
+执行全量复制时，主节点开启后台进程保存RDB文件，同时开始缓冲客户端发来的写指令。RDB文件生成好后，传输给子节点，子节点利用该RDB文件重构数据集，然后主节点再将缓冲的“写指令流”发送给子节点。如果同时有多个从节点需要全量复制的话，主节点只会生成一个RDB文件，一对多进行全量复制。
+
 ## 2 基于哨兵的高可用
 
 ## 3 集群模式
