--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -16,7 +16,7 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 ### 1.1 主从复制
 
-[Replication – Redis](https://redis.io/topics/replication)
+整理于：[Replication – Redis](https://redis.io/topics/replication)
 
 主从复制机制（master slave replication）是Redis主从架构的核心。 通过简单配置即可指定节点的主从角色及复制关系（*leader-follower*或称*master-slave*），从实例将是主实例的“精确副本”。当链接断开时，从实例都会自动重连主实例，而且无论主实例发生什么事，从实例都会将主实例的状态精确地复制过来（即使主实例宕机重启且没设置备份导致数据集空了，从实例也会将空数据集复制过来）。
 
@@ -57,7 +57,52 @@ Redis单机能不能用？当然可以，架构的演进都是从单节点、小
 
 执行全量复制时，主节点开启后台进程保存RDB文件，同时开始缓冲客户端发来的写指令。RDB文件生成好后，传输给子节点，子节点利用该RDB文件重构数据集，然后主节点再将缓冲的“写指令流”发送给子节点。如果同时有多个从节点需要全量复制的话，主节点只会生成一个RDB文件，一对多进行全量复制。
 
+在Redis 2.8.0之前，还不支持PSYNC这种部分重同步的指令，那时候有个[SYNC](https://redis.io/commands/sync)指令，从节点发送SYNC后，主节点会将它收到的所有指令批量给从节点发一遍(bulk transfer)。
+
+### 1.4 Replication ID 详解
+
+前面我们提到Replication ID与Offset，
+
+> 如果两个实例的Replication ID与Offset相同，那么这两个实例的数据集一定相同。
+
+这倒好理解，但为什么说一个实例可能会有两个Replication ID呢？
+
+我们启动一个干净的Redis实例，并执行`info replication`：
+
+```shell
+127.0.0.1:6379> info replication
+# Replication
+role:master
+connected_slaves:0
+master_replid:228dba67579a89e940b478dbe5948b11ea2b653c
+master_replid2:0000000000000000000000000000000000000000
+master_repl_offset:0
+second_repl_offset:-1
+repl_backlog_active:0
+repl_backlog_size:1048576
+repl_backlog_first_byte_offset:0
+repl_backlog_histlen:0
+```
+
+我们可以看到有两个id `master_replid`与`master_replid2`，同时对应两个offset `master_repl_offset`与`second_repl_offset`，目前有效的只有第一个id与offset。
+
+前面说的，Replication ID描述的是数据集。每个Redis实例在以master身份启动时，或是从replica（从节点）被提升为master（主节点）时，都会生成一个新的Replication ID。从节点在连接上主节点后，并成功握手后，会“**继承**”主节点的Replication ID。这样主从节点都有相同的Replication ID表示它们拥有相同的数据集，只不过可能各自处在不同的时间点（不同的offset）。
+
+![image-20210903161229299](assets/image-20210903161229299.png)
+
+但是为什么Redis实例需要2个Replication ID呢？是因为要考虑到**从节点晋升为主节点的情况**。在一次故障转移（failover）发生后，从节点晋升为主节点，将生成一个新的Replication ID来替换当前`master_replid`（后面称id1），老的Replication ID会被保存到`master_replid2`（后面称id2）上，当前offset不变（offset1），并保存晋升时的offset至`second_repl_offset`（offset2）。当其他从节点连接至新主节点时，它们发送PSYNC带的的Replication ID仍然是老主节点的id（保存在id2上的），主节点会同时与id1、offset1、id2、offset2比较，如果与id2相同且offset差距不大，说明刚发生过故障转移，那么就不需要做全量复制了。
+
+为什么从节点晋升后一定要换一个Replication ID呢？因为故障转移可能存在一种特殊的情况：老主节点仍在线，只是与其他节点产生了网络隔离。这样的话两个主节点都在持续接收写指令，二者的数据集必然是不同的，这就与`如果两个实例的Replication ID与Offset相同，那么这两个实例的数据集一定相同`冲突了。
+
+### 1.5 无磁盘化复制
+
+全量复制依赖于RDB文件的生成，但是如果你的硬盘比较垃圾的话，生成RDB文件就成了一个负担。自Redis 2.8.18开始，提供了一个功能：主节点的后台进程直接将RDB发送给从节点，不走硬盘过一遍。
+
 ## 2 基于哨兵的高可用
+
+整理于：[Redis Sentinel Documentation](https://redis.io/topics/sentinel)
+
+哨兵提供了Redis的高可用方案。线上的Redis部署架构，在发生故障时，无需人力干预仍能做到继续提供服务。
 
 ## 3 集群模式
 
