--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -108,7 +108,7 @@ Redis哨兵除了提供了高可用的能力外，还有一些其他如监控等
 
 1. **监控**：Sentinel会不断检查主实例和从实例是否在正常工作。
 2. **通知**：当监控的实例出问题时，Sentinel能够通过API通知系统管理员，或通知其他应用程序。
-3. **自动故障转移**：当监控到主实例出问题时，Sentinel可以将其某个从实例提升为主实例，并自动配置其他从实例连接新的主实例，同时通知客户端连接至新的地址。
+3. **自动故障转移**：当监控到主实例出问题时，Sentinel可以将其某个从实例提升为主实例，并自动配置其他从实例连接至新的主实例，同时通知客户端连接至新的地址。
 4. **配置提供**：Sentinel可以为客户端提供服务发现能力：客户端只需要配置连接Sentinel，Sentinel就能够为客户端提供指定服务的主实例地址，并在发生故障转移时通知客户端新的主实例地址。
 
 Redis哨兵是一套分布式系统。哨兵本来就是设计为“多个Sentinel协同工作”的机制，这种“协同工作”有如下优点：
