--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -116,7 +116,14 @@ Redis哨兵是一套分布式系统。哨兵本来就是设计为“多个Sentin
 1. 多个Sentinel实例同时参与故障检测，降低了误报的风险。（比如某个Sentinel实例监测到master失联，而其他Sentinel实例均未发现异常，那么真实情况可能只是那个Sentinel的网络问题，这样就可以避免发起不必要的故障转移）
 2. 部分Sentinel实例故障时，整个Sentinel系统仍能提供服务。（本身就是个提供故障转移能力的系统，却因自身故障而“失能”就没意思了。。）
 
+### 2.1 Sentinel部署前需要了解的
 
+- 一个健壮的架构需要至少3台Sentinel实例。
+- 这3台（或更多）Sentinel必须分别独立运行在不同的机器或VM上。
+- Sentinel+Redis的架构，不能保证在发生故障时数据100%不丢失（因为Redis的复制是异步的），但是可以通过配置，将丢失的数据控制在一小段时间内。
+- Sentinel需要客户端的支持。
+- 不经过充分测试的高可用架构是谈不上高可用的，在开发环境中要不时地测试你的架构的“高可用性”，可能的话，生产环境也要做不定期的测试，就像漏电保护开关的“TEST”按钮，你需要每个月按一次以确认它的“漏电保护”功能还在工作。
+- 如果在Docker中部署Sentinel或Redis的话，需要额外注意Docker的端口映射问题（Sentinel的自动发现功能是依赖特定端口的）。
 
 ## 3 集群模式
 
