--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -125,5 +125,34 @@ Redis哨兵是一套分布式系统。哨兵本来就是设计为“多个Sentin
 - 不经过充分测试的高可用架构是谈不上高可用的，在开发环境中要不时地测试你的架构的“高可用性”，可能的话，生产环境也要做不定期的测试，就像漏电保护开关的“TEST”按钮，你需要每个月按一次以确认它的“漏电保护”功能还在工作。
 - 如果在Docker中部署Sentinel或Redis的话，需要额外注意Docker的端口映射问题（Sentinel的自动发现功能是依赖特定端口的）。
 
+### 2.2 Sentinel配置
+
+Sentinel通过`sentinel.conf`配置文件来实现配置的，一个典型的最少的配置如下：
+
+```
+sentinel monitor mymaster 127.0.0.1 6379 2
+sentinel down-after-milliseconds mymaster 60000
+sentinel failover-timeout mymaster 180000
+sentinel parallel-syncs mymaster 1
+
+sentinel monitor resque 192.168.1.3 6380 4
+sentinel down-after-milliseconds resque 10000
+sentinel failover-timeout resque 180000
+sentinel parallel-syncs resque 5
+```
+
+这个配置监控了两套master，分别指定了名称`mymaster`和`resque`。从实例的信息是不需要手动配置的，它们靠的是自动发现，Sentinel在获取到从实例信息后会自动更新到配置中。当发生故障转移从实例提升为主实例，或是自动发现了新的Sentinel，都会自动重写配置。
+
+`sentinel monitor`配置的用法：
+
+```shell
+sentinel monitor <master-group-name> <ip> <port> <quorum>
+# sentinel monitor mymaster 127.0.0.1 6379 2
+```
+
+这行配置的含义是：让Sentinel监控名为`mymaster`的主实例，其ip是`127.0.0.1`，端口是`6379`，quorum数量是`2`。其他的好理解，这个`quorum`是个啥？
+
+- 
+
 ## 3 集群模式
 
