--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -88,7 +88,7 @@ repl_backlog_histlen:0
 
 前面说的，Replication ID描述的是数据集。每个Redis实例在以master身份启动时，或是从replica（从节点）被提升为master（主节点）时，都会生成一个新的Replication ID。从节点在连接上主节点后，并成功握手后，会“**继承**”主节点的Replication ID。这样主从节点都有相同的Replication ID表示它们拥有相同的数据集，只不过可能各自处在不同的时间点（不同的offset）。
 
-![image-20210903161229299](assets/image-20210903161229299.png)
+![从实例中的offset一般会落后于主实例中的offset](assets/image-20210903161229299.png)
 
 但是为什么Redis实例需要2个Replication ID呢？是因为要考虑到**从节点晋升为主节点的情况**。在一次故障转移（failover）发生后，从节点晋升为主节点，将会生成一个新的Replication ID来替换当前`master_replid`（后面称id1），老的Replication ID会被保存到`master_replid2`（后面称id2）上，当前offset不变（offset1），并保存晋升时的offset至`second_repl_offset`（offset2）。当其他从节点连接至新主节点时，它们发送PSYNC带的的Replication ID仍然是老主节点的id（保存在id2上的），主节点会同时与id1、offset1、id2、offset2比较，如果与id2相同且offset差距不大，说明刚发生过故障转移，那么就不需要做全量复制了。
 
@@ -150,9 +150,16 @@ sentinel monitor <master-group-name> <ip> <port> <quorum>
 # sentinel monitor mymaster 127.0.0.1 6379 2
 ```
 
-这行配置的含义是：让Sentinel监控名为`mymaster`的主实例，其ip是`127.0.0.1`，端口是`6379`，quorum数量是`2`。其他的好理解，这个`quorum`是个啥？
+这行配置的含义是：让Sentinel监控名为`mymaster`的主实例，其ip是`127.0.0.1`，端口是`6379`，quorum数量是`2`。其他的好理解，这个**quorum**是个啥？
 
-- 
+> 当主实例发生失联时，需要至少**quorum**数量的Sentinel均认为该主实例失联，该主实例才会被“确切”认定为失联，然后才会开始故障转移程序。
 
-## 3 集群模式
+但是**quorum**只在检测及认定主实例失联时起作用，当确定失联后，仍需要大部分Sentinel（**majority**数量）投票选出一个Sentinel来执行故障转移。比如假设有5台Sentinel，quorum设置为2，那么：
+
+- 同时有2台Sentinel均认为某主实例失联，那么这两台Sentinel中某一台会被选中执行故障转移。
+- 如果至少有3台Sentinel能够响应（选举），那么那台Sentinel将会被授权并开始执行故障转移。
+
+*这意味着在故障发生期间，如果大部分的Sentinel无法通信，那么将不会发生故障转移。*
+
+## 3 **集群模式**
 
