--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -161,5 +161,10 @@ sentinel monitor <master-group-name> <ip> <port> <quorum>
 
 *这意味着在故障发生期间，如果大部分的Sentinel无法通信，那么将不会发生故障转移。*
 
+还有两个需要关注的重要的配置：
+
+- `down-after-milliseconds`：设置一个毫秒数，如果某个主实例失联（PING未响应，或响应error）时长超过了这个时间，Sentinel开始认为该主实例产生故障。
+- `parallel-syncs`：在故障转移发生后，从实例需要切换复制新的主实例，这个切换的过程是需要时间的，该配置的数值就是指定**同时切换到复制新主实例的从实例数量**。这个值设置得越小，故障转移完成所需要的时间更长。虽然切换后从实例需要全量同步的概率不是100%，而且即使发生全量同步，从实例的大部分时间也是非阻塞，但是毕竟有阻塞的时间窗口嘛，你肯定不希望所有从实例一块进入阻塞状态。比如你可以设置该值为1，意味着同一时间只有1台从实例可能会进入阻塞状态。
+
 ## 3 **集群模式**
 
