--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -168,3 +168,8 @@ sentinel monitor <master-group-name> <ip> <port> <quorum>
 
 ## 3 **集群模式**
 
+[cluster-tutorial](https://redis.io/topics/cluster-tutorial)
+
+[Redis 集群模式的工作原理能说一下么？](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/redis-cluster)
+
+Redis集群模式可以说是结合了主从复制及哨兵的特点，能够应对海量数据的高并发场景，并且能够做到高可用。前面提到的主从模式的水平扩容需要做客户端分片，集群模式能够做到服务端分片。
