--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -172,4 +172,8 @@ sentinel monitor <master-group-name> <ip> <port> <quorum>
 
 [Redis 集群模式的工作原理能说一下么？](https://doocs.gitee.io/advanced-java/#/./docs/high-concurrency/redis-cluster)
 
-Redis集群模式可以说是结合了主从复制及哨兵的特点，能够应对海量数据的高并发场景，并且能够做到高可用。前面提到的主从模式的水平扩容需要做客户端分片，集群模式能够做到服务端分片。
+Redis集群模式可以说是结合了主从复制及哨兵的特点，能够应对海量数据的高并发场景，并且能够做到高可用。集群模式可以将**数据集自动分片**到多个Redis节点上，同时能提供一定程度上的高可用，比如集群中部分节点挂掉后整个集群仍能提供有效的服务。当然如果集群中的大部分节点都故障的话，集群就不可用了。总的来说，Redis集群有这俩能力：
+
+1. 将数据集自动分片到多个节点上。
+2. 在部分节点不可用的情况下整个集群仍能持续服务。
+
