redis cluster 哈希槽

--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -181,5 +181,34 @@ Redis集群模式可以说是结合了主从复制及哨兵的特点，能够应
 
 cluster节点需要开启两个端口用于TCP连接，其中一个是常规的提供给客户端的端口，一般如`6379`。另一个用于集群总线（**Redis Cluster Bus**）通讯，是前一个端口`+10000`，如`16379`。集群总线是集群节点间的通讯通道，用于节点间的故障检测、配置更新、故障转移授权等等，客户端永远不需要连接总线端口。Redis集群模式想要正常工作，必须保证每个节点的这两个端口是可达的（防火墙放开这俩端口）。
 
-需要注意的是如果集群节点的部署环境是Docker或是其他一些NAT网络环境。实际对外暴露的端口可能与节点启动的端口不一致，这样的话集群不会正确地工作。一般来说启动端口要与映射后的端口一致。
+需要注意的是如果集群节点的部署环境是Docker或是其他一些NAT网络环境。实际对外暴露的端口可能与节点启动的端口不一致，这样的话集群不会正确地工作。映射端口设置需要是一对一相同的。
+
+### 3.2 数据分片与哈希槽与hash tags
+
+Redis集群使用了一个叫“哈希槽（**hash slot**）”的概念来将数据进行分片，每一个key都属于某个哈希槽。整个Redis集群一共有**16384**个哈希槽，这个16384是固定的。（至于为什么是这个数字，看[这个](https://www.cnblogs.com/rjzheng/p/11430592.html)）
+
+集群是如何确定一个key应该放在哪个哈希槽中的？先取key的`CRC16`的值，再和16383做与运算（等价于与对16384取模）。
+
+每个集群的节点都被分配了一部分哈希槽，比如某个集群有3个节点ABC：
+
+- 节点A持有编号0-5500的哈希槽。
+- 节点B持有编号5501-11000的哈希槽。
+- 节点C持有编号11001-16383的哈希槽。
+
+哈希槽的设计使得集群的扩容缩容变得非常方便，每次向集群中增加节点或删除节点，只需要移动哈希槽即可。比如上面的例子中我想新增一个节点D，那么集群只需要将节点ABC中的部分哈希槽匀点给D节点就行了。同理，如果我想删除节点A，集群只需要A节点上的哈希槽均匀移给BC即可。
+
+Redis集群还支持多个key的批量操作，但是需要这些key都在同一个slot中。当然Redis集群还支持用户指定将一些key存到同一个slot中，这种机制叫**hash tags**。
+
+Hash tags能够保证多个key同时命中同一个哈希槽，通常用于多key的批量操作。Hash tags是如何用的呢？如果某个key包含了“`{...}`”格式的内容，那么集群只会对"`{`"和"`}`"之间的内容计算哈希槽。走Hash tags的规则是：
+
+- key包含一个"`{`"。
+- **且**存在一个"`}`"位于"`{`"的右侧。
+- **且**在第一个"`{`"与第一个"`}`"之间存在一或多个字符。
+
+当然一个key中可能存在多个"`{`"与"`}`"，这种情况只会对第一个"`{`"与第一个"`}`"之间的内容做hash tags计算。举例：
+
+- 存在两个key：`{user1000}.following`与`{user1000}.followers`，那么只会对`user1000`做哈希槽计算。
+- 存在一个key ：`foo{}{bar}`，那么整个key都会用来做哈希槽计算，因为第一个"`{`"与第一个"`}`"之间没有字符。
+- 存在一个key：`foo{{bar}}zap`，那么 `{bar`会被用来在哈希槽计算，因为hash tags规则只会取第一个"`{`"与第一个"`}`"之间的内容。
+- 存在一个key： `foo{bar}{zap}`，那么`bar`会被用来在哈希槽计算，与上一个同理。
 
