--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -181,6 +181,8 @@ Redis集群模式可以说是结合了主从复制及哨兵的特点，能够应
 
 cluster节点需要开启两个端口用于TCP连接，其中一个是常规的提供给客户端的端口，一般如`6379`。另一个用于集群总线（**Redis Cluster Bus**）通讯，是前一个端口`+10000`，如`16379`。集群总线是集群节点间的通讯通道，用于节点间的故障检测、配置更新、故障转移授权等等，客户端永远不需要连接总线端口。Redis集群模式想要正常工作，必须保证每个节点的这两个端口是可达的（防火墙放开这俩端口）。
 
+集群中的节点之间使用了一种叫“**gossip**”的协议通过总线端口来传播信息，比如发现新节点、发送ping包检测其他节点是否在线（握手）、发送集群信息来触发某种机制（如故障转移）。还可以在手动故障转移模式（用户发起的故障转移）中向整个集群传播消息。
+
 需要注意的是如果集群节点的部署环境是Docker或是其他一些NAT网络环境。实际对外暴露的端口可能与节点启动的端口不一致，这样的话集群不会正确地工作。映射端口设置需要是一对一相同的。
 
 ### 3.2 数据分片与哈希槽与hash tags
@@ -211,4 +213,6 @@ Hash tags能够保证多个key同时命中同一个哈希槽，通常用于多ke
 - 存在一个key ：`foo{}{bar}`，那么整个key都会用来做哈希槽计算，因为第一个"`{`"与第一个"`}`"之间没有字符。
 - 存在一个key：`foo{{bar}}zap`，那么 `{bar`会被用来在哈希槽计算，因为hash tags规则只会取第一个"`{`"与第一个"`}`"之间的内容。
 - 存在一个key： `foo{bar}{zap}`，那么`bar`会被用来在哈希槽计算，与上一个同理。
+
+### 3.3 集群的拓扑结构与节点握手
 
