--- a/2.Redis/3.redis-deployment-architecture.md
+++ b/2.Redis/3.redis-deployment-architecture.md
@@ -216,3 +216,8 @@ Hash tags能够保证多个key同时命中同一个哈希槽，通常用于多ke
 
 ### 3.3 集群的拓扑结构与节点握手
 
+当所有节点互相连接后，整个集群组成了一张完整的“网”。**集群中的每一个节点都会与其他所有节点保持长连接。**假设集群中有N个节点，那么每个节点都会向外发出N-1个连接，且会接收到N-1个连接。
+
+![image-20210914135729852](assets/image-20210914135729852.png)
+
+也就是说任意两个节点之间存在两条长连接。
